<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Ivan Marinčić
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Wear Documents</string>
    <string name="main_view_add_file">Add documents by pressing \"+\" button</string>
    <string name="main_view_read_permission_denied">Unable to grant permission</string>
    <string name="channel_client_task_file_sent">Document sent to wearable</string>
    <string name="message_client_task_file_deleted">Document deleted from wearable</string>
    <string name="file_browser_dialog_select">Select</string>
    <string name="file_browser_dialog_cancel">Cancel</string>
    <string name="file_browser_dialog_title">File Browser</string>
    <string name="document_preview_dialog_edit">Edit</string>
    <string name="document_preview_dialog_rename">Rename</string>
    <string name="document_preview_dialog_delete">Delete</string>
    <string name="document_preview_dialog_cancel">Cancel</string>
    <string name="document_preview_dialog_save">Upload</string>
    <string name="node_picker_dialog_title">Pick device for sync</string>
    <string name="document_rename_dialog_title">Rename document</string>
    <string name="document_rename_dialog_done">Done</string>
    <string name="document_rename_dialog_cancel">Cancel</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_title_error">Error</string>
    <string name="alert_dialog_error_device_missing">There are no wearables to sync with</string>
    <string name="alert_dialog_error_device_connection">There seems to be issue with wearable connection</string>
    <string name="alert_dialog_error_reading_file">There seems to be an issue when reading file</string>
    <string name="alert_dialog_error_converting">There seems to be an issue when converting file</string>
    <string name="alert_dialog_error_deleting_file">There seems to be an issue when deleting file on wearable, delete from device only</string>
    <string name="alert_dialog_error_oom">There seems to be an issue with memory when converting files, try reducing image quality</string>
    <string name="alert_dialog_title_delete_only">Delete on this device only</string>
    <string name="alert_dialog_description_delete_only">Do you want to delete document on this device only </string>
    <string name="alert_dialog_this_only">This only </string>
    <string name="alert_dialog_no_both">Delete on both</string>
    <string name="notification_title_uploading">Uploading document</string>
    <string name="notification_title_uploading_finished">Uploading finished</string>
    <string name="notification_title_uploading_failed">Uploading failed</string>
    <string name="notification_button_uploading_cancel">Cancel</string>
    <string name="notification_title_deleting">Deleting document</string>
    <string name="notification_title_deleting_finished">Deleting finished</string>
    <string name="notification_title_deleting_failed">Deleting failed</string>
    <string name="toolbar_menu_about">About</string>
    <string name="toolbar_menu_settings">Settings</string>
    <string name="settings_dialog_title">Application settings</string>
    <string name="settings_dialog_quality">Picture Quality:</string>
    <string name="about_dialog_title">About application</string>
    <string name="about_dialog_version">Version:</string>
    <string name="about_dialog_view_source">View source</string>
    <string name="about_dialog_view_source_description">View complete source code of this application</string>
    <string name="about_dialog_leave_a_tip">Leave a tip</string>
    <string name="about_dialog_leave_a_tip_description">Support development of this application</string>
    <string name="about_dialog_report_issue">Report issue</string>
    <string name="about_dialog_report_issue_description">Found a bug or want a new feature? Inform me so I can start working on it</string>
    <string name="about_dialog_uploading_issue_description">If you are having issue with uploading document try uploading while wearable application is open</string>
</resources>
