<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/file_browser_dialog_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_toolbar_size"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/document_preview_dialog_toolbar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:tint="@color/actionBarPrimaryText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/file_browser_dialog_toolbar_icon_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_folder_open" />

            <TextView
                android:id="@+id/document_preview_dialog_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/actionBarPrimaryText"
                android:textSize="@dimen/file_browser_dialog_toolbar_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toRightOf="@id/file_browser_dialog_toolbar_icon_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/file_browser_dialog_toolbar_icon_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />
        </android.support.constraint.ConstraintLayout>

        <ListView
            android:id="@+id/document_preview_dialog_data"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/document_preview_dialog_content_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_browser_dialog_toolbar"/>

        <ProgressBar
            android:id="@+id/document_preview_dialog_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/document_preview_dialog_data"
            app:layout_constraintLeft_toLeftOf="@id/document_preview_dialog_data"
            app:layout_constraintRight_toRightOf="@id/document_preview_dialog_data"
            app:layout_constraintTop_toTopOf="@id/document_preview_dialog_data" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/document_preview_dialog_control_buttons">

            <Button
                android:id="@+id/document_preview_dialog_cancel_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/document_preview_dialog_cancel" />

            <Button
                android:id="@+id/document_preview_dialog_save_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_preview_dialog_save"
                android:textColor="@color/success_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/document_preview_dialog_content_buttons">

            <Button
                android:id="@+id/document_preview_dialog_delete_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/document_preview_dialog_delete"
                android:textColor="@color/warning_text_color" />

            <Button
                android:id="@+id/document_preview_dialog_edit_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_preview_dialog_edit" />

            <Button
                android:id="@+id/document_preview_dialog_rename_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_preview_dialog_rename" />
        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/document_preview_dialog_control_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <android.support.constraint.Guideline
            android:id="@+id/document_preview_dialog_content_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>